[package]
name = "pooller"
version = "0.1.0"
authors = ["lsunsi <sunsi.lucas@gmail.com>", "FelipeRosa <felipe.sgrosa@gmail.com>"]
edition = "2018"

[dependencies]
web3 = "0.13.0"
ethcontract = "0.8.0"
futures = "0.3.2"
graphql_client = "0.9.0"

[dependencies.tokio]
version = "0.2.22"
features = ["macros"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.bigdecimal]
version = "0.2.0"
features = ["serde"]

[dependencies.reqwest]
version = "0.10.8"
features = ["json"]

[build-dependencies]
ethcontract-generate = "0.8.0"
