[package]
name = "pooller"
version = "0.1.0"
authors = ["lsunsi <sunsi.lucas@gmail.com>", "FelipeRosa <felipe.sgrosa@gmail.com>"]
edition = "2018"

[dependencies]
web3 = "0.13.0"
ethcontract = "0.9.0"
futures = "0.3.8"
graphql_client = "0.9.0"
toml = "0.5.7"
log = "0.4.11"
env_logger = "0.8.2"
colored = "2.0.0"
num-bigint = "0.3.1"

[dependencies.tokio]
version = "0.2.23"
features = ["macros", "sync"]

[dependencies.serde]
version = "1.0.117"
features = ["derive"]

[dependencies.bigdecimal]
version = "0.2.0"
features = ["serde"]

[dependencies.reqwest]
version = "0.10.9"
features = ["json"]

[build-dependencies]
ethcontract-generate = "0.9.0"
